...
                <Text textAlign={"center"}>
                    We’ll send you notifications to keep you up to date with your crypto assets.
                </Text>
            </Center>
            <Center style={{ flex: 1 }}></Center>
            <VStack space={"20px"} marginBottom="20px">
                <Button onPress={() => submitNotification(true)} testID="enableNotificationsSubmit">
                    Enable notifications
                </Button>
                <Center>
                    <Link
                        _text={{
                            color: "darkBlue.500",
                            fontWeight: "semibold",
                        }}
                        isUnderlined={false}
                        onPress={() => submitNotification(false)}
                        testID="disableNotificationsSubmit"
                    >
                        Not now
                    </Link>
                </Center>
            </VStack>
        </View>
...
